Fix code elements overflowing

--- a/src/assets/post.pcss
+++ b/src/assets/post.pcss
@@ -71,6 +71,9 @@ main {
 	p + h6 {
 		margin-top: 2em;
 	}
+	pre {
+		max-width: 85vw;
+	}
 }
 
 header {
